<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knapsack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="expense_type">Expense Type</string>
    <string name="expense_des">Expense Description</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_photo">Select Bill</string>
    <string name="take_photo">Take Photo</string>
    <string name="attach_bill">Attach Bill</string>
    <string name="description">Description</string>

    <string name="save">Save</string>

    <string name="select_date">Select Date</string>

    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="title_activity_expense_details">ExpenseDetails</string>



</resources>
