<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_type"
            android:layout_margin="4dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtxt_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:hint="@string/expense_des"
            android:inputType="textImeMultiLine"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtxt_amount"
            android:layout_width="match_parent"
            android:hint="@string/expense_amount"
            android:inputType="number"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtxt_date"
            android:layout_width="match_parent"
            android:hint="@string/expense_date"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:singleLine="true" />


        <CheckBox
            android:id="@+id/chk_attachPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attach_bill" />

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:visibility="visible"
            android:layout_height="80dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_insert_expense"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content" />

</LinearLayout>
